- bug#70867: WRONG OS ERROR NUMBER REPORTED IN ERROR LOG DURING FAILURE AT   STARTUP

InnoDB has handler to handle some of the common known errors.
  One of such error is ACCESS VIOLATION error which is detected and
  proper notifying error message is printed but it left unmapped to internal
  InnoDB error code that causes caller function to think that error is
  is not from know list and caller try to invoke default error handle
  leading to error-code and message mis-match.

  Fixed by ensuring that known ACCESS VIOLATION error is mapped to proper
  InnoDB error code.

  Approved by: Kevin (rb#3986)
  (BPS approval by Sveta)